After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703103 - Fix compilation with older glibs
Fix compilation with older glibs
Status: RESOLVED FIXED
Product: librest
Classification: Platform
Component: other
0.7.x
Other Linux
: Normal normal
: ---
Assigned To: librest-maint
librest-maint
Depends on:
Blocks:
 
 
Reported: 2013-06-26 09:03 UTC by Christophe Fergeau
Modified: 2013-06-28 15:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix compilation (14.25 KB, patch)
2013-06-26 09:03 UTC, Christophe Fergeau
needs-work Details | Review
Fix compilation with older glibs (8.41 KB, patch)
2013-06-28 14:44 UTC, Christophe Fergeau
committed Details | Review

Description Christophe Fergeau 2013-06-26 09:03:11 UTC
Created attachment 247801 [details] [review]
fix compilation

librest requires glib 2.24 but build fails when using it.
Comment 1 Ross Burton 2013-06-26 10:07:32 UTC
Even Debian stable has 2.33, so why not just bump the minimum version instead?
Comment 2 Christophe Fergeau 2013-06-26 10:16:26 UTC
RHEL6 is stuck on something older, I'd like to keep things building there just in case.
Comment 3 Ross Burton 2013-06-26 10:18:14 UTC
Review of attachment 247801 [details] [review]:

Fair enough.  glib-compat still says "spice", and what happens when an older glib is used at compile time but then at runtime a newer glib is present?
Comment 4 Christophe Fergeau 2013-06-26 12:38:39 UTC
I've tested a build against glib 2.26.0 and then ran examples/test-xml against glib master (double-checked it was being used with pmap), and I did not observe any issues.
I'll look at removing the spice mentions.
Comment 5 Christophe Fergeau 2013-06-28 14:44:56 UTC
Created attachment 247991 [details] [review]
Fix compilation with older glibs

configure.ac requires glib 2.24, but librest is making use of
glib functions that were added in later releases (g_clear_object,
g_simple_async_report_take_gerror_in_idle, ...).
This commit adds reimplementation of these functions which will
be used when an older glib is present at build time. glib-compat.[ch]
come from spice-gtk.
Comment 6 Ross Burton 2013-06-28 14:51:25 UTC
Review of attachment 247991 [details] [review]:

Looks good.
Comment 7 Christophe Fergeau 2013-06-28 15:17:29 UTC
Attachment 247991 [details] pushed as a63c691 - Fix compilation with older glibs