Fix compilation with older glibs

configure.ac requires glib 2.24, but librest is making use of
glib functions that were added in later releases (g_clear_object,
g_simple_async_report_take_gerror_in_idle, ...).
This commit adds reimplementation of these functions which will
be used when an older glib is present at build time. glib-compat.[ch]
come from spice-gtk.

https://bugzilla.gnome.org/show_bug.cgi?id=703103